# src/main/java/dev/matheuscruz/kafkamoon/api/application/usecases/cluster/nodes/list/ListNodesUseCaseOutput.java
@@ -1,10 +1,8 @@
 package dev.matheuscruz.kafkamoon.api.application.usecases.cluster.nodes.list;
 
-public record ListNodesUseCaseOutput(
-    String id,
-    String host,
-    int port,
-    boolean hasRack,
-    String rack,
-    boolean isEmpty,
-    Integer quantityOfTopics) {}
+import com.fasterxml.jackson.annotation.JsonInclude;
+
+@JsonInclude(JsonInclude.Include.NON_NULL)
+public record ListNodesUseCaseOutput(String id, String host, int port, boolean hasRack, String rack, boolean isEmpty,
+      Integer quantityOfTopics) {
+}
